top bar height in file viewer on mobile bug

--- a/src/component/VirtualDesktop.css
+++ b/src/component/VirtualDesktop.css
@@ -155,7 +155,7 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  height: 100%;
+  height: fit-content;
   box-sizing: border-box;
   padding: 0.25em 0.5em 0.25em 0.5em;
   background-color: rgb(255, 255, 255);
